--- a/matheorems/public/manifest.json
+++ b/matheorems/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "MaTheorems",
+  "name": "All Math Theorems in one place",
   "icons": [
     {
       "src": "favicon.ico",
